hphp/test/zend/good/ext/exif/tests/exif021.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image021.tiff'));
?>